group 'com.jiin'
version '0.1'

apply plugin: 'java'
apply plugin: 'maven'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'
apply plugin: 'war'

jar {
    enabled = true
}

war {
    archiveName('admin-view.war')
}

bootWar {
    archiveName('admin-view.war')
}

bootRun {
    sourceResources sourceSets.main
}

sourceCompatibility = 1.8

buildscript {
    ext {
        springBootVersion = '2.2.5.RELEASE'
    }
    repositories {
        mavenCentral()
        maven { url 'https://repo.spring.io/libs-snapshot' }
    }
    dependencies {
        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
    }
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/libs-snapshot' }
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.11'
    compile('org.springframework.boot:spring-boot-starter-web')
    compile('org.springframework.boot:spring-boot-starter-aop')
    compile("org.springframework.boot:spring-boot-starter-thymeleaf")
    compile('org.springframework.boot:spring-boot-starter-jdbc')
    compile("org.springframework.boot:spring-boot-starter-data-jpa")
    compile('org.springframework.boot:spring-boot-devtools')
    compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.1')
    compile("org.springframework.boot:spring-boot-starter-security")
    runtime('com.h2database:h2')
    runtime('mysql:mysql-connector-java')
    compile('org.postgresql:postgresql:42.2.10')
    compile("commons-dbcp:commons-dbcp:1.4")
    compileOnly('org.projectlombok:lombok:1.18.12')
    annotationProcessor('org.projectlombok:lombok:1.18.12')
    compile('commons-validator:commons-validator:1.6')
    compile('commons-fileupload:commons-fileupload:1.4')
    compile('commons-io:commons-io:2.6')
    compile('org.apache.poi:poi:4.1.2')
    compile('nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:2.4.1')
    compile('com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.10.3')
    //compile gradleApi()
    compile('org.apache.httpcomponents:httpcore:4.4.13')
    compile('org.apache.httpcomponents:httpclient:4.5.12')
    implementation('org.thymeleaf.extras:thymeleaf-extras-springsecurity5:3.0.4.RELEASE')
    compile('org.json:json:20190722')
    compile('io.minio:minio:6.0.13')        //이지훈 LOS가시화 minio 라이브러리 추가
    compile('xmlpull:xmlpull:1.1.3.1')      //이지훈 LOS가시화 XML Pull Parsing API 라이브러리 추가
    providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
    compile('org.jsoup:jsoup:1.11.2') // 강인성 Syncthing 정보를 얻기 위해 사용한 라이브러리
}
configurations {
    //compile.exclude group:'ch.qos.logback'
}